@@ -38,6 +38,44 @@ name|FileChannel
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|FileExistsException
+import|;
+end_import
+
 begin_comment
 comment|/**  *  */
 end_comment
@@ -378,6 +416,84 @@ argument_list|)
 operator|.
 name|exists
 argument_list|()
+return|;
+block|}
+comment|// Files.createDirectories has odd behavior if the path is a symlink and it already exists
+comment|// _even if it's a symlink to a directory_.
+comment|//
+comment|// oddly, if the path to be created just contains a symlink in intermediate levels, Files.createDirectories
+comment|// works just fine.
+comment|//
+comment|// This works around that issue
+DECL|method|createDirectories
+specifier|public
+specifier|static
+name|Path
+name|createDirectories
+parameter_list|(
+name|Path
+name|path
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|Files
+operator|.
+name|exists
+argument_list|(
+name|path
+argument_list|)
+operator|&&
+name|Files
+operator|.
+name|isSymbolicLink
+argument_list|(
+name|path
+argument_list|)
+condition|)
+block|{
+name|Path
+name|real
+init|=
+name|path
+operator|.
+name|toRealPath
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|Files
+operator|.
+name|isDirectory
+argument_list|(
+name|real
+argument_list|)
+condition|)
+return|return
+name|real
+return|;
+throw|throw
+operator|new
+name|FileExistsException
+argument_list|(
+literal|"Tried to create a directory at to an existing non-directory symlink: "
+operator|+
+name|path
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+throw|;
+block|}
+return|return
+name|Files
+operator|.
+name|createDirectories
+argument_list|(
+name|path
+argument_list|)
 return|;
 block|}
 block|}
